@@ -1,3 +1,9 @@
+2006-02-11  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/ultraTB.py (VerboseTB.text.text_repr): Added patch
+	contributed by marienz to close
+	http://www.scipy.net/roundup/ipython/issue53.
+
 2006-02-10  Ville Vainio  <vivainio@gmail.com>  
 
 	* genutils.py: getoutput now works in win32 too
